--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!------------------------TEST FOR TYPEWRITER-------------------->
     <h3> Mustafa Abdulrahman</h3>
     <h1> I am a <span class="typing"></span></h1>
-     <p>I am not just a programmer, not just an algorithm enthusiast, or a data scientist. I am a human just like everyone else that wants to accomplish one thing. That is happiness. This means to me a lot, and something I enjoy doing is making applications from Discord Bots to 2d games that can help make people's lives easier. I find satisfaction from being a mentor, being a leader, and being someone who has a heart. Click on the button below to see more of what I have to show to you.</p>
+     <p>I am not just a programmer, not just an algorithm enthusiast, or a data scientist. I am a human just like everyone else that wants to accomplish one thing. That is happiness. This means the world to me, and something I enjoy doing is making applications from Discord Bots to 2d games that can help make people's lives easier. I find satisfaction from being a mentor, being a leader, and being someone who has a heart. Click on the button below to see more of what I have to show to you.</p>
         <a href="#projects">
             <span></span>
             <span></span> 
