--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  <!------------------------------------HEADER--------------------------------------->  
  <section id = "header"> 
      <nav class="navbar navbar-light">
-  <a class="navbar-brand" href="#"><img src="images/mustafa_white_logo.png"></a>
+  <a class="navbar-brand" href="#"><img src="images/logo-ma.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
   <i class="fa fa-bars"></i>
   </button>
@@ -55,7 +55,12 @@
     <!------------------------TEST FOR TYPEWRITER-------------------->
     <h3> Mustafa Abdulrahman</h3>
     <h1> I am a <span class="typing"></span></h1>
-     <p>I am not just a programmer, not just an algorithm enthusiast, or a data scientist. I am a human just like everyone else that wants to accomplish one thing. That is happiness. This means the world to me, and something I enjoy doing is making applications from Discord Bots to 2d games that can help make people's lives easier. I find satisfaction from being a mentor, being a leader, and being someone who has a heart. Click on the button below to see more of what I have to show to you.</p>
+     <p>Hi, I'm Mustafa. I am currently studying Computer Engineering at the University of Toronto.
+         I have a passion for creating things, and I find software engineering
+         the most accessible to way for me to build those things whether it's an app or a web app. Additionally,
+         I love competing, and coincidentally my two passions for software engineering and competing mix wonderfully in hackathons.
+         I'm an avid hacker, and I'm won some awards myself. Scroll down to see more about me.
+     </p>
         <a href="#projects">
             <span></span>
             <span></span> 
@@ -262,18 +267,24 @@
     <div class="row wow fadeInUp">
     <div class="col-md-4">
      <img src="images/mustafa_logo.png" class="wow fadeInRight delay-1s">
-     <h4 class="wow fadeInRight delay-2s">WEB DEVELOPMENT</h4>
-      <p>A goal of mine is to frequent this website throughout my career in the software world- over time I will gain new understanding and along with it cool projects that will cement themselves in this website first. </p>   
+     <h4 class="wow fadeInRight delay-2s">1. Summer Internship</h4>
+      <p> My goal is to get a summer internship while in my first year at the University of Toronto.
+      Getting practical experience in industry is so important to me because it validates all the
+      personal learning I have done.</p>
     </div>
         <div class="col-md-4">
      <img src="images/mustafa_logo.png" class="wow fadeInRight delay-1s">
-     <h4 class="wow fadeInRight delay-2s">APP DEVELOPMENT</h4>
-      <p>My plan is to create an app that can be of use to people around the world. I gain happiness from helping others- it is my calling to create an app that can make something that is unnecessarily hard, to something easy.</p>   
+     <h4 class="wow fadeInRight delay-2s">2. Summer Research</h4>
+      <p>I plan on getting a summer research position in my second year. One of the biggest strengths
+      of UofT compared to other universities is its research opportunities, and I think it's a great way
+          to build connections with professors.</p>
     </div>
         <div class="col-md-4">
      <img src="images/mustafa_logo.png" class="wow fadeInRight delay-1s">
-     <h4 class="wow fadeInRight delay-2s">BACKEND DEVELOPMENT</h4>
-      <p>Another goal I have in mind is to learn more about server development. I have learned a lot on front-end tech, but I want to know what happens behind the scenes. From learning backend I will diversify my work.</p>   
+     <h4 class="wow fadeInRight delay-2s">3. PEY Internship</h4>
+      <p>Ultimately during my third year, I wish to find a full year internship via the PEY program at UofT.
+      The previous experiences I hope to have will help me decide more what I want to do in my career
+      and I hope to figure out whom I want to be.</p>
     </div>
     </div>    
     </div>
@@ -284,14 +295,14 @@
     <div class="container">
      <div class="row">
       <div class="col-md-3">
-     <img src="images/mustafa_white_logo.png" class="footer-logo"> 
-     <p>This is my showcase website which holds all my best projects from discord bots to cool arcade games</p>   
+     <img src="images/mustafa_white_logo.png" class="footer-logo">
+     <p>This is my showcase website which holds all my best projects from discord bots to full stack apps</p>
     </div>  
          
     <div class="col-md-3">
     <h1>Titles</h1>
-        <p>Certified Programmer</p>
-        <p>Software Lover</p>
+        <p>Passionate Programmer</p>
+        <p>Software Engineer</p>
         <p>Game Changer</p>
         <p>Anime Enthusiast</p>
     </div>
@@ -306,7 +317,7 @@
     <div class="col-md-3">
     <h1>Follow me On</h1>
             <p><i class="fa fa-github"></i><a href="https://github.com/Mustaballer">Github</a></p>
-            <p><i class="fa fa-facebook"></i><a href="https://www.facebook.com/Mustaballer">Facebook</a></p>
+            <p><i class="fa fa-laptop"></i><a href="https://devpost.com/mus2003abdul">Devpost</a></p>
             <p><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/mustafaabdulrahman123">LinkedIn</a></p>
             <p><i class="fa fa-twitter"></i><a href="https://twitter.com/1abdulrahmus">Twitter</a></p>
     </div>
@@ -324,7 +335,7 @@
     <script src="js/smooth-scroll.js"></script>
     <!---------------ANIMATION--------------------->
     <script src="js/wow.min.js"></script>
-        <!---------------TYPEWRITER TEST--------------------->
+    <!---------------TYPEWRITER TEST--------------------->
 
     <script src="js/typed.min.js"></script>
     <script>
@@ -339,8 +350,8 @@
         new WOW().init();
         var scroll = new SmoothScroll('a[href*="#"]');
         
-         var typed = new Typed('.typing', {
-        strings: ["Node.js and Express Engineer", "JDA Bot Creator", "Front-End Designer", "MongoDB Analyzer"],
+        var typed = new Typed('.typing', {
+        strings: ["React Developer", "Discord Bot Creator", "MLH Hacker", "Full-Stack Engineer"],
              loop: true,
           typeSpeed: 40,
              backSpeed: 40,
