--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <p>Passionate Programmer</p>
         <p>Software Engineer</p>
         <p>Game Changer</p>
-        <p>Anime Enthusiast</p>
+        <p>Competitive MLH Hacker</p>
     </div>
          
     <div class="col-md-3">
